Fix responsiveness of package grid on mobile

--- a/app/scss/custom.scss
+++ b/app/scss/custom.scss
@@ -268,9 +268,9 @@ pre {
 	grid-template-columns: repeat(2, 1fr);
 }
 
-.grid-4 {
+.grid-250px {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .gap-2 {
